syntax = "proto3";
package messages;

import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";
import "google/protobuf/any.proto";

message RemotePubSubMessage {
    uint64 ID = 1;
    string topic = 2;
    google.protobuf.Any message = 3;
}

message PubSubSubscribeRequest {
    int64 requestID = 1;
    string pattern = 2;
    actor.PID subscriber = 3;
}

message PubSubSubscribeResponse {
    int64 requestID = 1;
    string error = 2;
}

message PubSubUnsubscribeRequest {
    int64 requestID = 1;
    string pattern = 2;
    actor.PID subscriber = 3;
}

message PubSubUnsubscribeResponse {
    int64 requestID = 1;
}

message PubSubUnsubscribeAll {
    actor.PID subscriber = 4;
}

